metallb/04-network-policy.yml
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1 
metadata:
  name: allow-apiserver
  namespace: metallb-system
spec:
  policyTypes:
  - Egress
  podSelector: {}
  egress:
  - ports:
    - port: 6443
      protocol: TCP
    to:
    - ipBlock:
        cidr: 192.168.9.132/32
